menmbuat halaman rekening pada vendor, merubah tampilan pemasukan dan saldo

--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -648,7 +648,7 @@
     position: relative;
     margin-top: 10px;
     display: grid;
-    max-height: 500px;
+    max-height: auto;
     background: var(--white);
     padding: 20px;
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
